--- a/package.json
+++ b/package.json
@@ -16,12 +16,22 @@
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "ngx-pagination": "^4.1.0",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.14.3",
+    "rxjs-compat": "^6.2.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.2",
