--- a/angular.json
+++ b/angular.json
@@ -89,9 +89,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+            "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+            "node_modules/bootstrap/dist/css/bootstrap.css",
+            "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            "node_modules/hammerjs/hammer.min.js"
+            ]
           }
         },
         "lint": {
